--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ version = "0.1.0"
 crate-type = ["cdylib"]
 
 [dependencies]
+libnfs = { version = "0.1.0", path = "../libnfs-rs" }
 napi = { version = "2" , default-features = false, features = [
   "tokio_fs",
   "napi8",
@@ -21,6 +22,8 @@ napi = { version = "2" , default-features = false, features = [
   "chrono_date",
 ] }
 napi-derive = { version = "2" }
+nix = "0.23.0"
+send_wrapper = "0.6.0"
 serde_json = "1.0.82"
 
 [build-dependencies]
