--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 libnfs = { version = "0.1.0", path = "../libnfs-rs" }
+mime_guess = "2.0.4"
 napi = { version = "2" , default-features = false, features = [
   "tokio_fs",
   "napi8",
