--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nfs-js",
   "version": "1.0.0",
   "description": "nfs js",
-  "main": "index.js",
+  "main": "indax.ts",
   "repository": "git@github.com:napi-rs/package-template.git",
   "license": "MIT",
   "keywords": [
