--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -5,10 +5,8 @@ linker = "aarch64-linux-gnu-gcc"
 linker = "arm-linux-gnueabihf-gcc"
 
 [target.x86_64-unknown-linux-musl]
-rustflags = [
-  "-C",
-  "target-feature=-crt-static",
-]
+linker = "x86_64-linux-musl-gcc"
+rustflags = ["-C", "target-feature=-crt-static"]
 
 [target.aarch64-unknown-linux-musl]
 linker = "aarch64-linux-musl-gcc"
