--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "build:darwin:x64": "napi build --platform --release --target x86_64-apple-darwin --pipe \"prettier -w\"",
     "build:darwin:arm64": "napi build --platform --release --target aarch64-apple-darwin --pipe \"prettier -w\"",
     "build:linux:x64": "napi build --platform --release --target x86_64-unknown-linux-musl --pipe \"prettier -w\"",
+    "build:linux:arm64": "napi build --platform --release --target aarch64-unknown-linux-musl --pipe \"prettier -w\"",
     "build:debug": "napi build --platform --pipe \"prettier -w\"",
     "format": "run-p format:prettier format:rs",
     "format:prettier": "prettier . -w",
