--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nfs-js",
   "version": "1.0.0",
   "description": "nfs js",
-  "main": "index.js",
+  "main": "indax.js",
   "repository": "git@github.com:napi-rs/package-template.git",
   "license": "MIT",
   "keywords": [
@@ -14,6 +14,7 @@
     "node-addon-api"
   ],
   "files": [
+    "indax.ts",
     "index.d.ts",
     "index.js"
   ],
@@ -46,6 +47,10 @@
     "artifacts": "napi artifacts",
     "bench": "node -r @swc-node/register benchmark/bench.ts",
     "build": "napi build --platform --release --pipe \"prettier -w\"",
+    "build:darwin:x64": "napi build --platform --release --target x86_64-apple-darwin --pipe \"prettier -w\"",
+    "build:darwin:arm64": "napi build --platform --release --target aarch64-apple-darwin --pipe \"prettier -w\"",
+    "build:linux:x64": "napi build --platform --release --target x86_64-unknown-linux-musl --pipe \"prettier -w\"",
+    "build:linux:arm64": "napi build --platform --release --target aarch64-unknown-linux-musl --pipe \"prettier -w\"",
     "build:debug": "napi build --platform --pipe \"prettier -w\"",
     "format": "run-p format:prettier format:rs",
     "format:prettier": "prettier . -w",
