--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
-    "target": "ES2018",
+    "target": "ES2020",
     "strict": true,
+    "strictPropertyInitialization": false,
     "moduleResolution": "node",
     "module": "CommonJS",
     "noUnusedLocals": true,
