--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,6 +25,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Setup go
+      uses: actions/setup-go@v3
+      with:
+        go-version: '1.19'
+        check-latest: true
     - name: Setup SSH
       run: |
         mkdir -p $HOME/.ssh
