--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,17 +10,13 @@ version = "0.2.0"
 crate-type = ["cdylib"]
 
 [dependencies]
+bytes = "1.3.0"
 libnfs = { version = "0.1.0", path = "./libnfs-rs" }
 mime_guess = "2.0.4"
 napi = { version = "2" , default-features = false, features = [
-  "tokio_fs",
   "napi8",
-  "tokio_rt",
-  "serde-json",
   "async",
-  "experimental",
   "latin1",
-  "chrono_date",
 ] }
 napi-derive = { version = "2" }
 nix = "0.23.0"
