--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["cdylib"]
 [dependencies]
 bytes = "1.3.0"
 libnfs = { version = "0.1.0", path = "./libnfs-rs" }
+nfs-rs = { version = "0.1.0", path = "./nfs-rs" }
 mime_guess = "2.0.4"
 napi = { version = "2" , default-features = false, features = [
   "napi8",
