--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,19 +10,19 @@ version = "0.2.0"
 crate-type = ["cdylib"]
 
 [dependencies]
-bytes = "1.3.0"
-libnfs = { version = "0.1.0", path = "./libnfs-rs" }
+bytes = "1.8.0"
+libnfs = { version = "0.1.2", path = "./libnfs-rs" }
 nfs-rs = { version = "0.1.0", path = "./nfs-rs" }
 mime_guess = "2.0.4"
-napi = { version = "2" , default-features = false, features = [
+napi = { version = "~2.16.13" , default-features = false, features = [
   "napi8",
   "async",
   "latin1",
 ] }
-napi-derive = { version = "2" }
-nix = "0.23.0"
+napi-derive = { version = "~2.16.12" }
+nix = { version = "0.29.0", features = ["fs"] }
 send_wrapper = "0.6.0"
-serde_json = "1.0.82"
+serde_json = "1.0.132"
 
 [build-dependencies]
 napi-build = "2"
