--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wasmin/nfs-js-node",
-  "version": "1.0.0",
+  "version": "0.7.0",
   "description": "nfs js",
   "main": "indax.js",
   "repository": "git@github.com:NetAppLabs/nfs-js-node.git",
@@ -66,22 +66,23 @@
   },
   "devDependencies": {
     "@napi-rs/cli": "^2.18.4",
-    "@swc-node/register": "^1.5.1",
-    "@types/node": "^22.9.3",
-    "@typescript-eslint/eslint-plugin": "^5.27.1",
-    "@typescript-eslint/parser": "^5.27.1",
-    "ava": "^4.3.0",
+    "@swc-node/register": "^1.10.10",
+    "@swc/core": "^1.11.22",
+    "@types/node": "^22.15.3",
+    "@typescript-eslint/eslint-plugin": "^8.31.0",
+    "@typescript-eslint/parser": "^8.31.0",
+    "ava": "^6.2.0",
     "benny": "^3.7.1",
-    "chalk": "^5.0.1",
+    "chalk": "^5.4.1",
     "eslint": "^8.17.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.1",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.6",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.6.2",
-    "typescript": "^5.7.2"
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.3"
   },
   "lint-staged": {
     "*.@(js|ts|tsx)": [
