--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,9 +23,13 @@ napi-derive = { version = "~2.16.12" }
 nix = { version = "0.29.0", features = ["fs"] }
 send_wrapper = "0.6.0"
 serde_json = "1.0.132"
+regex = "1.11.1"
 
 [build-dependencies]
 napi-build = "2"
 
 [profile.release]
 lto = true
+
+[patch.crates-io]
+libnfs-sys = { path = "./libnfs-sys" }
