--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 authors = ["LongYinan <lynweklm@gmail.com>","Tryggvi Larusson <Tryggvi.Larusson@netapp.com>","Fridvin Oddbjornsson <Fridvin.Oddbjornsson@netapp.com>"]
 edition = "2021"
 name = "nfs-js"
-version = "0.7.0"
+version = "0.8.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -30,6 +30,7 @@ napi-build = "2"
 
 [profile.release]
 lto = true
+rpath = true
 
 [patch.crates-io]
 libnfs-sys = { path = "./libnfs-sys" }
