--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@netapplabs/nfs-js-node",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "description": "nfs js",
   "main": "indax.js",
   "repository": "git@github.com:NetAppLabs/nfs-js-node.git",
@@ -16,23 +16,18 @@
   "files": [
     "indax.ts",
     "index.d.ts",
-    "index.js"
+    "index.js",
+    "*.node"
   ],
   "napi": {
-    "name": "nfs-js",
+    "name": "nfs-js-node",
     "triples": {
       "defaults": true,
       "additional": [
-        "x86_64-unknown-linux-musl",
-        "aarch64-unknown-linux-gnu",
-        "i686-pc-windows-msvc",
-        "armv7-unknown-linux-gnueabihf",
+        "x86_64-apple-darwin",
         "aarch64-apple-darwin",
-        "aarch64-linux-android",
-        "x86_64-unknown-freebsd",
-        "aarch64-unknown-linux-musl",
-        "aarch64-pc-windows-msvc",
-        "armv7-linux-androideabi"
+        "x86_64-unknown-linux-gnu",
+        "aarch64-unknown-linux-gnu"
       ]
     }
   },
@@ -40,8 +35,8 @@
     "node": ">= 10"
   },
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/",
-    "access": "public"
+    "registry": "https://npm.pkg.github.com",
+    "access": "restricted"
   },
   "scripts": {
     "artifacts": "napi artifacts",
