Adding permissions to workflow

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,6 +16,10 @@ jobs:
   build:
 
     runs-on: ${{ matrix.os }}
+    
+    permissions:
+      contents: write
+      packages: write
 
     strategy:
       matrix:
